# HTTPServer

./: .gitmodules  CMakeLists.txt  README.md
libs/patches/: fix_simple_web_server_cmake.patch
src/: FileSaver.cpp  FileSaver.h  main.cpp
